@@ -1,3 +1,12 @@
+2009-09-25
+
+	* libsylph/utils.[ch]
+	  libsylph/socket.[ch]
+	  libsylph/session.c
+	  libsylph/pop.c
+	  src/inc.c
+	  src/main.c: fixed the handling of GDK thread lock.
+
 2009-09-18
 
 	* libsylph/utils.c: execute_command_line_async_wait(): disable
